--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ body {
 input, button {
   padding: 10px;
   margin: 10px 0;
-  width: 100%;
   font-size: 16px;
+  max-width: 100%;
+  /* width: 100%; */
+  display: block;
+}
+
+.car-details {
+  background: #ecf0f1;
+  border:1px solid #bdc3c7;
+  border-radius: 8px;
+  text-align: left;
+  margin-top: 20px;
+  padding: 10px;
 }
